--- a/webroot/scss/_settings.scss
+++ b/webroot/scss/_settings.scss
@@ -123,10 +123,10 @@ $primary-color: #008CBA;
 // $include-html-type-classes: $include-html-classes;
 
 // We use these to control header font styles
-//$header-font-family:"Fredericka the Great";
+$header-font-family:"Helvetica Neue Condensed Black";
 // $header-font-weight: $font-weight-normal;
 // $header-font-style: normal;
-//$header-font-color: white;
+$header-font-color: white;
 // $header-line-height: 1.4;
 // $header-top-margin: .2rem;
 // $header-bottom-margin: .5rem;
